client/src/styles/pages/service-page/Alacarte.css
.a-la-carte-container {
  border: 0px solid red;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.a-la-carte-header {
  border: 0px solid blue;
  margin: 2rem 3rem 0 3rem;
  background: rgb(255, 248, 239);
  line-height: 2rem;
  padding: 2rem;
}

.a-la-carte-header h1 {
  font-size: 1.75rem;
}

.a-la-carte-body {
  border: 0px solid blue;
  margin: 2rem 0;
}

.carte-items ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.carte-item {
  border: 0px solid purple;
  margin: 1rem 1rem;
  list-style-type: none;
  max-width: 400px;
  background: rgb(255, 212, 212);
  background: radial-gradient(
    circle,
    rgba(255, 212, 212, 0.7959558823529411) 25%,
    rgba(255, 212, 212, 0.896796218487395) 50%,
    rgba(255, 212, 212, 1) 75%
  );
  max-width: 400px;
  width: 100%;
}

.carte-carousel {
  border: 0px solid blue;
}

.carte-item-img {
  max-width: 400px;
  max-height: 400px;
  border: 0px solid blue;
}

.carte-item-img img {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  object-position: top;
}

.carte-item-desc {
  text-align: center;
  text-wrap: balance;
  border: 0px solid red;
  padding: 1rem 2rem 2rem 2rem;
}

.carte-item-desc h2 {
  font-style: italic;
  border: 0px solid red;
  padding: 1rem 0;
}

.carte-item-desc p {
  border: 0px solid blue;
}
.carte-footer {
  background: rgb(255, 248, 239);
  border: 0px solid blue;
  width: 100%;
  padding: 3rem 4rem;
  line-height: 2rem;
  font-style: italic;
  margin-bottom: 2rem;
}

